<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rtwsquared.android.sandpit.controls.ProgressURLDownloadActivity">

    <ScrollView
        android:id="@+id/progress_bar_url_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/progress_bar_url_bar_header_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/progress_bar_url_text_header" />

            <Button
                android:id="@+id/progress_bar_url_download_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/progress_bar_url_bar_header_id"
                android:text="@string/progress_bar_url_download_button_text" />


            <LinearLayout
                android:id="@+id/progress_bar_url_result_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/progress_bar_url_download_button_id"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progress_bar_url_progressBar_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_marginTop="25dp"
                    android:max="100" />

                <TextView
                    android:id="@+id/progress_bar_url_result_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/progress_bar_url_text_result" />

                <ImageView
                    android:id="@+id/progress_bar_image_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:contentDescription="@string/progress_bar_url_image_description" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/progress_bar_dem_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/progress_bar_url_layout"
        >

    <TextView
        android:id="@+id/progress_bar_demo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/progress_bar_demo_text_header" />

    <LinearLayout
        android:id="@+id/progress_bar_demo_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/progress_bar_demo_start_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_bar_demo_button_start_text" />

        <Button
            android:id="@+id/progress_bar_demo_stop_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_bar_demo_button_stop_text" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_demo_progress_bar_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:max="100" />

        <TextView
            android:id="@+id/progress_bar_demo_result_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/progress_bar_demo_text_result" />
    </LinearLayout>

</RelativeLayout>
