<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rtwsquared.android.sandpit.controls.ProgressDialogActivity">

    <TextView
        android:id="@+id/progress_dialog_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_dialogue_text_header" />

    <LinearLayout
        android:id="@+id/progress_dialog_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress_dialog_header"
        android:layout_margin="25dp">


        <Button
            android:id="@+id/progress_dialog_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_dialog_button_text" />
    </LinearLayout>
    <TextView
        android:id="@+id/progress_dialog_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress_dialog_button_layout"
        android:text="@string/progress_dialogue_text_result" />

</RelativeLayout>
